--- a/WNDYR.Tests/NASA.Tests.csproj
+++ b/WNDYR.Tests/NASA.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{790DBACF-2750-42DB-9DBD-DA574473833B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WNDYR.Tests</RootNamespace>
-    <AssemblyName>WNDYR.Tests</AssemblyName>
+    <RootNamespace>NASA.Tests</RootNamespace>
+    <AssemblyName>NASA.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -45,23 +45,25 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=106.6.10.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.106.6.10\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppSettingsTests.cs" />
+    <Compile Include="ImageFileServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NasaPhotoRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\WNDYR.NASA\App.config">
-      <Link>App.config</Link>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WNDYR.NASA\WNDYR.NASA.csproj">
-      <Project>{6FFE9806-62B5-4E55-AF93-38AF51761975}</Project>
-      <Name>WNDYR.NASA</Name>
+    <ProjectReference Include="..\NASA.Service\NASA.API.csproj">
+      <Project>{C66C7F8E-9682-469D-81CC-7EF53AAE0294}</Project>
+      <Name>NASA.API</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
